finished whith the cushioning product data

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -133,20 +133,26 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Bubble Wrap</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Bubble Wrap & Foam Dispenser</a>
+                  <li routerLink="bubble-wrap">
+                    <a mdbWavesEffect>Bubble Wrap</a>
                   </li>
-                  <li><a href="#" mdbWavesEffect>Cushioning Foam</a></li>
-                  <li><a href="#" mdbWavesEffect>Kraft Wrapping Paper</a></li>
-                  <li><a href="#" mdbWavesEffect>Mini Air System</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Newsprint Wrapping Paper</a>
+                  <li routerLink="bubble-wrap-foam-dispenser">
+                    <a mdbWavesEffect>Bubble Wrap & Foam Dispenser</a>
                   </li>
-                  <li><a href="#" mdbWavesEffect>Packing Peanuts</a></li>
-                  <li><a href="#" mdbWavesEffect>Tissue Wrapping Paper</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Wrapping Paper Dispenser</a>
+                  <li routerLink="cushioning-foam">
+                    <a mdbWavesEffect>Cushioning Foam</a>
+                  </li>
+                  <li routerLink="kraft-wrapping-paper">
+                    <a mdbWavesEffect>Kraft Wrapping Paper</a>
+                  </li>
+                  <li routerLink="newsprint-wrapping-paper">
+                    <a mdbWavesEffect>Newsprint Wrapping Paper</a>
+                  </li>
+                  <li routerLink="packing-peanuts">
+                    <a mdbWavesEffect>Packing Peanuts</a>
+                  </li>
+                  <li routerLink="tissue-wrapping-paper">
+                    <a mdbWavesEffect>Tissue Wrapping Paper</a>
                   </li>
                 </ul>
               </mdb-accordion-item-body>
