--- a/src/app/products/cushioning/packing-peanuts/packing-peanuts.component.html
+++ b/src/app/products/cushioning/packing-peanuts/packing-peanuts.component.html
@@ -1,3 +1,124 @@
-<p>
-  packing-peanuts works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/packing-peanuts.jpg"
+            alt="Packing Peanuts"
+            data-toggle="modal"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/packing-peanuts.jpg"
+                    alt="Packing Peanuts"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">PACKING PEANUTS (SPECIALTY)</h3>
+          <p class="card-text lead">
+            Our packing peanuts are useful for filling empty spaces in the
+            packaging.
+          </p>
+          <p class="card-text lead">
+            <strong>Protects your shipment:</strong> Our premium quality peanuts
+            are durable and will surround your product, offering complete
+            protection.
+          </p>
+          <p class="card-text lead">
+            <strong>Light weight & low cost:</strong> Our packing peanuts have a
+            guaranteed low price. Its light weight also keeps shipping costs to
+            a minimum.
+          </p>
+          <p class="card-text lead">
+            <strong>Reliable interlocking featuer:</strong> Interlocking-shaped
+            peanuts create a strong cushion and a reliable protection.
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              DESCTIPTION
+            </th>
+            <th scope="col">
+              COLOR
+            </th>
+            <th scope="col">
+              SIZE
+            </th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let peanut of packingPeanuts"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ peanut.productNumber }}</td>
+          <td class="item align-middle">{{ peanut.description }}</td>
+          <td class="item align-middle">{{ peanut.color }}</td>
+          <td class="item align-middle">{{ peanut.size }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
