--- a/src/app/products/cushioning/newsprint-wrapping-paper/newsprint-wrapping-paper.component.html
+++ b/src/app/products/cushioning/newsprint-wrapping-paper/newsprint-wrapping-paper.component.html
@@ -1,3 +1,119 @@
-<p>
-  newsprint-wrapping-paper works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/newsprint-wrapping-paper.jpg"
+            alt="Newsprint Wrapping Paper"
+            data-toggle="modal"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/newsprint-wrapping-paper.jpg"
+                    alt="Newsprint Wrapping Paper"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">NEWSPRINT WRAPPING PAPER</h3>
+          <p class="card-text lead">
+            Newsprint wrapping paper offers an all-purpose packaging material.
+            Excellent for wrapping boxes, parts, or for filling empty spaces in
+            the packaging
+          </p>
+          <p class="card-text lead">
+            <strong>Low cost:</strong> Our wrapping paper has a guaranteed low
+            price and it lasts for ages.
+          </p>
+          <p class="card-text lead">
+            <strong>Prevents Scratches:</strong> Wrap around boxes, parts, and
+            other products to prevent scratches.
+          </p>
+          <p class="card-text lead">
+            <strong>Prevents damage:</strong> Can be used as cushioning for your
+            product.
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              SIZE W x L
+            </th>
+            <th scope="col">
+              WEIGHT/BUNDLE
+            </th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let paper of newsprintWrappingPaper"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ paper.productNumber }}</td>
+          <td class="item align-middle">{{ paper.size }}</td>
+          <td class="item align-middle">{{ paper.weightPerBundle }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
