worked on adding the data for the laser and envelopes components

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -164,13 +164,11 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Circle Mailing Labels</a></li>
-                  <li><a href="#" mdbWavesEffect>Laser Labels</a></li>
-                  <li><a href="#" mdbWavesEffect>Packing List Envelopes</a></li>
-                  <li>
-                    <a href="#" mdbWavesEffect>Shipping & Handling Labels</a>
-                  </li>
-                  <li><a href="#" mdbWavesEffect>Thermal Transfer</a></li>
+                  <li routerLink="circle-mailing-labels"><a mdbWavesEffect>Circle Mailing Labels</a></li>
+                  <li routerLink="laser-labels"><a mdbWavesEffect>Laser Labels</a></li>
+                  <li routerLink="packing-list-envelopes"><a mdbWavesEffect>Packing List Envelopes</a></li>
+                  <li routerLink="shipping-handling-labels"><a mdbWavesEffect>Shipping & Handling Labels</a></li>
+                  <li routerLink="thermal-transfer"><a mdbWavesEffect>Thermal Transfer</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
