--- a/src/app/products/labels-envelopes/circle-mailing-labels/circle-mailing-labels.component.html
+++ b/src/app/products/labels-envelopes/circle-mailing-labels/circle-mailing-labels.component.html
@@ -1,3 +1,114 @@
-<p>
-  circle-mailing-labels works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/circle_mailing_labels.jpg"
+            alt="Circle Mailing Labels"
+            data-toggle="modal"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/circle_mailing_labels.jpg"
+                    alt="Circle Mailing Labels"
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">CIRCLE MAILING LABELS</h3>
+          <p class="card-text lead">
+            Use our circle mailing labels to seal boxes, mailers, envelopes, and
+            your products.
+          </p>
+          <p class="card-text lead">
+            Crystal Clear
+          </p>
+          <p class="card-text lead">
+            <strong>Reliable:</strong> Our circle-mailing label has a powerful
+            bond, which can be used for your general packaging needs.
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              CIRCLE DIAMETER
+            </th>
+            <th scope="col">
+              LABELS PER ROLL
+            </th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let labels of circleMailingLabels"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ labels.productNumber }}</td>
+          <td class="item align-middle">{{ labels.circleDiameter }}</td>
+          <td class="item align-middle">{{ labels.labelsPerRoll }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
